Add role buttons, improve ticket storage, add ticket types, add "busy" times and days to tickets, improve echo command functionality